WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61367
fix x and y offsets in drawPattern
https://bugs.webkit.org/show_bug.cgi?id=61367
Summary
fix x and y offsets in drawPattern
Robin Dunn
Reported
2011-05-24 09:02:18 PDT
Created
attachment 94621
[details]
drawPattern patch Make sure x and y adjustments are applied to all operations, and fix the calculations for the height and width checks to take into account x and y offsets.
Attachments
drawPattern patch
(3.44 KB, patch)
2011-05-24 09:02 PDT
,
Robin Dunn
kevino
: review+
kevino
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Ollivier
Comment 1
2011-05-24 10:46:11 PDT
Landed in
r87169
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug