Reviewed by Kevin Ollivier.

[wx] Make sure x and y adjustments are applied to all operations, and fix the calculations for the height and width checks to take into account x and y offsets.

https://bugs.webkit.org/show_bug.cgi?id=61367


Canonical link: https://commits.webkit.org/76749@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87169 268f45cc-cd09-0410-ab3c-d52691b4dbfc